[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Ramschladen/Ramschladen.gd" type="Script" id=1]
[ext_resource path="res://assets/ramschladen.png" type="Texture" id=2]
[ext_resource path="res://assets/progress_bar_fill.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 330.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 225, 221 )

[node name="Ramschladen" type="KinematicBody2D" groups=["poi"]]
collision_layer = 4
script = ExtResource( 1 )

[node name="FuelCooldownTimer" type="Timer" parent="."]

[node name="FuelTransferTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.49012e-08, 1.19209e-07 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="GUI" type="Control" parent="."]
margin_left = -22.0
margin_top = 67.0
margin_right = 18.0
margin_bottom = 117.0

[node name="FuelBar" type="TextureProgress" parent="GUI"]
margin_left = -114.0
margin_top = 137.0
margin_right = -82.0
margin_bottom = 169.0
rect_scale = Vector2( 5.09913, 0.605523 )
value = 100.0
texture_progress = ExtResource( 3 )
tint_progress = Color( 0, 1, 0, 1 )
